// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parse Query > (1) Empty string 1`] = `{}`;

exports[`Parse Query > (2) With single parameter  1`] = `
{
  "q": "foo",
}
`;

exports[`Parse Query > (3) With multiple parameter  1`] = `
{
  "q": "foo",
  "sort": "best",
}
`;
